--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: rpc101-infrastructure
+name: rpc101-infra
 description: RPC101 Infrastructure - Umbrella Chart
 type: application
 version: 1.0.0
