--- a/helm/charts/kong/templates/configmap.yaml
+++ b/helm/charts/kong/templates/configmap.yaml
@@ -22,6 +22,8 @@ data:
   KONG_ADMIN_GUI_LISTEN: "0.0.0.0:8002"
   KONG_ADMIN_GUI_URL: "{{ .Values.adminGuiUrl }}"
   KONG_ADMIN_GUI_API_URL: "{{ .Values.adminGuiApiUrl | default (printf "http://localhost:30081") }}"
+  KONG_ADMIN_GUI_AUTH: "basic-auth"
+  KONG_ADMIN_GUI_SESSION_CONF: '{"secret":"super-secret-key-change-in-production","storage":"kong","cookie_secure":false}'
   KONG_LOG_LEVEL: "info"
   KONG_DATABASE_MIGRATIONS: "off"
 
